src/styles.scss
@font-face {
    src: url(fonts/Futura.ttf);
    font-family: Futura;
}

@font-face {
  src: url(fonts/FuturaBoldUnicode.ttf);
  font-family: FuturaBoldUnicode;
}

html, body {
  height: 100vh;
}

#root, .app {
  height: auto;
}

body {
    background-color: #000;
    font-family: Futura;
    margin: 0;
    color: #FFFFFF;

    font-size: 10px;
}

//MAIN

.container {
  width: 100em;
  height: inherit;
  margin: auto;
  padding: 10px;
}

.full {
  width: 100%;
  height: 100%;
}

.relative {
  position: relative;
}

.flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.center {
  justify-content: center;
  align-items: center;
}

.align-start {
  align-items: flex-start;
}

.flex-end {
  justify-content: end;
}

.flex-space-between {
  justify-content: space-between;
}

.flex-space-around {
  justify-content: space-around;
}

.flex-start {
  justify-content: flex-start;
}

.column {
  flex-direction: column;
}

.full-width {
  width: 100%;
}

.left {
  text-align: left !important;
}

.margin-off {
  margin: 0 !important;
}

.uppercase {
  text-transform: uppercase;
}

.small-text {
  span {
    font-size: 1.7em !important;
  }

  p {
    font-size: 2.5em !important;
  }
}

//SECTIONS

.home {
  height: 100vh;
  img.main {
    height: 27.3em;
    width: 55em;
  }
}

.about {
  // img.main {
  //   height: 32.2em;
  //   width: 40.3em;
  // }

  // img.festivalPic {
  //   height: 51.6em;
  //   width: 95.4em;
  // }

  .topics {
    font-size: 4.8em;
    line-height: 1.1666em;
  }
}

.sponsors {
  img.main {
    height: 25em;
    width: 25em;
  }

  .img-content {
    display: flex;
    align-items: center;
    height: auto;
    width: 23em;
    margin: 0 10px;
    justify-content: center;
  } 

  .title {
    font-style: italic !important;
  }
}

.sponsors-columns {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  // flex-wrap: wrap;
  // & > * {
  //   flex: 0 0 23em;
  // }
}

img.icon-1 {
  height: 7.4em;
  width: 6.475em;
}

img.icon-2 {
  height: 6.7em;
  width: 6.7em;
}

img.icon-3 {
  height: 7.4em;
  width: 7.4em;
}

img.icon-4 {
  height: 6.7em;
  width: 6.4em;
}

img.icon-5 {
  height: 7.4em;
  width: 6.8em;
}

.speakers {
  img.main {
    height: 18.7em;
    width: 52.3em;
  }
}

.flex-wrap {
  flex-wrap: wrap;
}

.sponsors-icons {
  width: 100%;

  .link {
    a {
      font-size: 1em !important;
    }
  }
  
  img {
    margin: 2.6em 5px;
  }

} 

.agenda {
  img.main {
    height: 25.6em;
    width: 50.662em;
  }

  img.icon {
    height: 15em;
  }
}

.Container-container {
  .active-popup {
     z-index: 99 !important;
  }
}

//Custom Popup
.overlay {
  visibility: hidden;
  opacity: 0;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  @media screen and (max-width: 1000px) {
    z-index: 99;
  }
}
.popup {
  margin: 15px auto;
  padding: 15px;
  background: #fff;
  border-radius: 5px;
  width: auto;
  min-width: 350px;
  position: relative;
  font-size: 1.3em;
  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 1);

  @media screen and (max-width: 1000px) {
    position: absolute;
    left: 0;
    right: 0;
    top: 20%;
    // width: 100% !important;
    min-width: 300px;
    margin: 0 15px;
  }
  .img-title, .img-paragraph {
    color: #000;
  }
  .img-title {
    margin-left: 20px;
  }
  img {
    height: 130px;
    width: 130px;
  }
  .title {
    margin: 0;
    font-size: 1.3em;
    line-height: 1.3em;
    text-align: center;
    color: #000;
  }
  .abstract {
    margin: 0;
    font-size: 1.3em;
    line-height: 1.3em;
    text-align: center;
    color: #000;
    max-height: 150px;
    overflow-y: auto;
  }

  .abstract::-webkit-scrollbar {
    width: 2px;
  }
   
  .abstract::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(255, 255, 255, 1);
  }
   
  .abstract::-webkit-scrollbar-thumb {
    background-color: darkgrey;
    outline: 1px solid darkgrey;
  }
}

.popup h2 {
  margin-top: 0;
  color: #333;
  font-family: Tahoma, Arial, sans-serif;
}
.popup .close {
  position: absolute;
  top: .2em;
  right: .4em;
  transition: all 200ms;
  font-size: 2em;
  font-weight: bold;
  text-decoration: none;
  color: #333;
}
.popup .close:hover {
  cursor: pointer;
  color: #000;
}
.popup .content {
  max-height: 30%;
  overflow: auto;
}
/* ... */

